# FastAPI_ML

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  rest-api.http
